--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,580 +1,206 @@
- 
-@media (min-width: 0px) and (max-width: 600px) {
+@media (min-width: 0px) and (max-width: 445px) {
 
   body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    background-image: url("../img/math2.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
   }
 
-  #container1{
+  #container1 {
     display: grid;
     grid-template-rows: 10% 80% 10%;
     grid-template-columns: 100%;
     height: 100vh;
   }
-  #section{
+
+  #section {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 5% 1fr 5%;
   }
 
-  #container2{
+  #container2 {
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
-    display: grid;
-    grid-template-rows: 25% 75%;
-    grid-template-columns: 100%;
-    grid-gap: .3rem;
-    height: 80vh;
-    width: 95%;
-    max-width: 310px;
-    min-width: 280px;
-  }
-
-  #solutionContainer{
-    display: grid;
-    grid-template-rows: 22% 46% 22%;
-    grid-template-columns: 100%;
-  }
-
-  #solutionBox{
-    grid-row: 2 / span 1;
-    grid-column: 1 / span 1;
-    margin: 1rem;
-    font-size: 20px;
-    margin-left: 10%;
-    text-align: center;
-    background-color: black;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-    padding: 2rem;
-  }
-
-  #buttonContainer{
-    display:grid;
-    grid-template-rows: 25% 25% 25% 25%;
-    grid-template-columns: 33% 33% 33%;
-    grid-gap: 1rem;
-    margin: 1.5rem;
-  }
-
-  #button1{
-    grid-row: 1 / span 1;
-    grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-    /* background-color: rgba(79, 79, 79, 0.819);
-    color: white; */
-
-  }
-
-  #button2{
-    grid-row: 1 / span 1;
-    grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #button3{
-    grid-row: 1 / span 1;
-    grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #button4{
-    grid-row: 2 / span 1;
-    grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-
-  }
-
-  #button5{
-    grid-row: 2 / span 1;
-    grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #button6{
-    grid-row: 2 / span 1;
-    grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #plus{
-    grid-row: 3 / span 1;
-    grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #minus{
-    grid-row: 3 / span 1;
-    grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 50px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #multiply{
-    grid-row: 3 / span 1;
-    grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #divide{
-    grid-row: 4 / span 1;
-    grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #openBracket{
-    grid-row: 4 / span 1;
-    grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #closeBracket{
-    grid-row: 4 / span 1;
-    grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  } 
-  
-  /* body {
-    margin: 0px;
-    padding: 0px;
-    background-color: black;
-  }
-
-  #container1{
     display: grid;
     grid-template-rows: 10% 80% 10%;
     grid-template-columns: 100%;
-    height: 100vh;
-  }
-
-  #container2{
-    display: grid;
-    grid-template-rows: 25% 75%;
-    grid-template-columns: 100%;
-    grid-gap: .3rem;
     height: 80vh;
-    width: 95%;
   }
 
-  #solutionContainer{
+  #container3 {
+    grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
     display: grid;
-    grid-template-rows: 22% 46% 22%;
-    grid-template-columns: 100%;
+    grid-template-rows: 25% 10% 25% 10% 15%;
+    grid-template-columns: 50% 50%;
+    height: 50vh;
+    background-color: rgba(0, 0, 0, 0.783);
+    border-radius: 6px;;
   }
 
-  #solutionBox{
-    grid-row: 2 / span 1;
-    grid-column: 1 / span 1;
+  #emailBox {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    width: 85%;
+    justify-self: center;
+    margin-top: 2rem;
+    background-color: rgb(196, 196, 196);
+    border: 2px solid white;
+    border-radius: 6px;
+    font-size: 20px;
+    color: white;
+  }
+
+  #passowrdBox {
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 3;
+    margin-bottom: 15px;
+    width: 85%;
+    justify-self: center;
     margin: 1rem;
-    font-size: 70px;
-    text-align: center;
-    margin-left: 60px;
-    background-color: black;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
+    font-size: 20px;
+    background-color: rgb(196, 196, 196);
+    border: 2px solid white;
+    border-radius: 6px;
+    color: white;
   }
 
-  #buttonContainer{
-    display:grid;
-    grid-template-rows: 25% 25% 25% 25%;
-    grid-template-columns: 33% 33% 33%;
-    grid-gap: 1rem;
-    margin: 1rem;
-    margin-left: 50px;
+  #createAccount {
+    color: white;
   }
 
-  #button1{
-    grid-row: 1 / span 1;
+  #signInButton {
+    grid-row: 5 / span 1;
     grid-column: 1 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: rgba(79, 79, 79, 0.819);
-    color: white; 
-    background-color: black;
+    width: 80%;
+    margin-left: 1.5rem;
+    font-size: 20px;
+    background-color: rgb(94, 155, 169);
+    border: 2px solid white;
+    border-radius: 6px;
     color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-
   }
 
-  #button2{
-    grid-row: 1 / span 1;
+  #signUpButton {
+    grid-row: 5 / span 1;
     grid-column: 2 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
+    width: 80%;
+    margin-left: 1rem;
+    font-size: 20px;
+    background-color: rgb(107, 169, 94);
+    border: 2px solid white;
+    border-radius: 6px;
     color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
   }
 
-  #button3{
-    grid-row: 1 / span 1;
-    grid-column: 3 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #button4{
-    grid-row: 2 / span 1;
-    grid-column: 1 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-
-  }
-
-  #button5{
-    grid-row: 2 / span 1;
-    grid-column: 2 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #button6{
-    grid-row: 2 / span 1;
-    grid-column: 3 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 80px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #plus{
-    grid-row: 3 / span 1;
-    grid-column: 1 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 120px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #minus{
-    grid-row: 3 / span 1;
-    grid-column: 2 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 160px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #multiply{
-    grid-row: 3 / span 1;
-    grid-column: 3 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 110px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #divide{
-    grid-row: 4 / span 1;
-    grid-column: 1 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 120px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #openBracket{
-    grid-row: 4 / span 1;
-    grid-column: 2 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 90px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }
-
-  #closeBracket{
-    grid-row: 4 / span 1;
-    grid-column: 3 / span 1;
-    margin: 3rem 2rem 3rem 2rem;
-    font-size: 90px;
-    background-color: black;
-    color: white;
-    border: 6px solid rgba(90, 90, 90, 0.819);
-    border-radius: 20px;
-  }  */
 
 }
-@media (min-width: 601px) {
+
+@media (min-width: 446px) {
 
   body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    background-image: url("../img/math2.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
-  #container1{
+  #container1 {
     display: grid;
     grid-template-rows: 10% 80% 10%;
     grid-template-columns: 100%;
     height: 100vh;
   }
 
-  #section{
+  #section {
     display: grid;
     grid-template-rows: 100%;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 410px 1fr;
   }
 
-  #container2{
+  #container2 {
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     display: grid;
-    grid-template-rows: 25% 75%;
+    grid-template-rows: 10% 1fr 10%;
     grid-template-columns: 100%;
-    /* grid-gap: .3rem; */
-    height: 85vh;
-    /* width: 95%; */
+    height: 80vh;
     max-width: 410px;
     min-width: 409px;
   }
 
-  #solutionContainer{
-    display: grid;
-    grid-template-rows: 22% 46% 22%;
-    grid-template-columns: 100%;
-  }
-
-  #solutionBox{
+  #container3 {
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
+    display: grid;
+    grid-template-rows: 25% 10% 25% 10% 15%;
+    grid-template-columns: 50% 50%;
+    height: 50vh;
+    background-color: rgba(0, 0, 0, 0.783);
+    border-radius: 6px;;
+    
+  }
+
+  #emailBox {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 3;
+    width: 85%;
+    justify-self: center;
+    margin-top: 2rem;
+    background-color: rgb(196, 196, 196);
+    border: 2px solid white;
+    border-radius: 6px;
+    font-size: 20px;
+    color: white;
+  }
+
+  #passowrdBox {
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 3;
+    margin-bottom: 15px;
+    width: 85%;
+    justify-self: center;
     margin: 1rem;
     font-size: 20px;
-    margin-left: 7%;
-    text-align: center;
-    background-color: black;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    background-color: rgb(196, 196, 196);
+    border: 2px solid white;
     border-radius: 6px;
-    padding: 2rem;
+    color: white;
   }
 
-  #buttonContainer{
-    display:grid;
-    grid-template-rows: 25% 25% 25% 25%;
-    grid-template-columns: 33% 33% 33%;
-    grid-gap: 1rem;
-    margin: 1.5rem;
+  #createAccount {
+    color: white;
   }
 
-  #button1{
-    grid-row: 1 / span 1;
+  #signInButton {
+    grid-row: 5 / span 1;
     grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    width: 80%;
+    margin-left: 1.5rem;
+    font-size: 20px;
+    background-color: rgb(94, 155, 169);
+    border: 2px solid white;
     border-radius: 6px;
-    /* background-color: rgba(79, 79, 79, 0.819);
-    color: white; */
-
+    color: white;
   }
 
-  #button2{
-    grid-row: 1 / span 1;
+  #signUpButton {
+    grid-row: 5 / span 1;
     grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
+    width: 80%;
+    margin-left: 1rem;
+    font-size: 20px;
+    background-color: rgb(107, 169, 94);
+    border: 2px solid white;
     border-radius: 6px;
+    color: white;
   }
-
-  #button3{
-    grid-row: 1 / span 1;
-    grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #button4{
-    grid-row: 2 / span 1;
-    grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-
-  }
-
-  #button5{
-    grid-row: 2 / span 1;
-    grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #button6{
-    grid-row: 2 / span 1;
-    grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 25px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-  #plus{
-    grid-row: 3 / span 1;
-    grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #minus{
-    grid-row: 3 / span 1;
-    grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 50px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #multiply{
-    grid-row: 3 / span 1;
-    grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #divide{
-    grid-row: 4 / span 1;
-    grid-column: 1 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #openBracket{
-    grid-row: 4 / span 1;
-    grid-column: 2 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  }
-
-  #closeBracket{
-    grid-row: 4 / span 1;
-    grid-column: 3 / span 1;
-    margin: .7rem .5rem .7rem .5rem;
-    font-size: 30px;
-    background-color: black;
-    color: white;
-    border: 2px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-  } 
 
 }
