--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -34,7 +34,7 @@
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     display:grid;
-    grid-template-rows: 7% 40% 10% 30% 10%;
+    grid-template-rows: 7% 43% 10% 30% 10%;
     grid-template-columns: 100%;
     grid-gap: .5rem;
     height: 85vh;
@@ -52,14 +52,17 @@
   #imageContainer{
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
+    margin-right: 2rem;
   }
 
   #profileImage{
     max-width: 100%;
-    height: 300px;
+    /* height: 300px; */
     object-fit: cover;
     object-position: center; 
     border-radius: 10px;
+    padding: 1rem;
+    border: 3px solid rgba(90, 90, 90, 0.819);
   }
 
   #imageUpload{
@@ -71,10 +74,23 @@
   }
 
   #findImage{
+
+    display:none;
+
+  }
+
+  .findImageStyle{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    margin-top: 1.5rem;
     color: white;
+    border: 1px solid rgba(90, 90, 90, 0.819);
+    border-radius: 6px;
+    padding-top: 5%;
+    padding-left: 2%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-right: .5rem;;
+    text-align: center;
   }
 
   #uploadButton{
@@ -82,12 +98,11 @@
     grid-column: 2 / span 1;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    width: 90%;
-    margin-left: .7rem;
-    background-color: rgb(120, 195, 120);
+    background-color: rgba(120, 195, 120, 0.713);
     color: white;
-    border: 2px solid black;
+    border: 1px solid white;
     border-radius: 6px;
+    margin-left: .5rem;
   }
 
   #userFields{
@@ -148,9 +163,9 @@
   #saveButton{
     grid-column: 1 / span 2;
     grid-row: 5 / span 1;
-    background-color: rgb(120, 195, 120);
+    background-color: rgba(120, 195, 120, 0.713);
     color: white;
-    border: 2px solid black;
+    border: 1px solid white;
     border-radius: 6px;
   }
 
@@ -169,9 +184,9 @@
     margin-bottom: 1rem;
     margin-left: .5rem;
     margin-right: .5rem;
-    background-color: rgb(90, 145, 180);
+    background-color: rgba(90, 146, 180, 0.735);
     color: white;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 6px;
   }
 
@@ -207,7 +222,7 @@
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     display:grid;
-    grid-template-rows: 10% 47% 10% 20% 10%;
+    grid-template-rows: 10% 55% 10% 20% 10%;
     grid-template-columns: 100%;
     height: 85vh;
   
@@ -223,6 +238,7 @@
   #imageContainer{
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
+
   }
 
   #profileImage{
@@ -231,6 +247,8 @@
     object-fit: cover;
     object-position: center; 
     border-radius: 10px;
+    padding: 1rem;
+    border: 3px solid rgba(90, 90, 90, 0.819);
   }
 
   #imageUpload{
@@ -242,10 +260,26 @@
   }
 
   #findImage{
-    grid-row: 1 / span 1;
+
+    display:none;
+    /* grid-row: 1 / span 1;
     grid-column: 1 / span 1;
     margin-top: 1.5rem;
+    color: white; */
+  }
+
+  .findImageStyle{
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
     color: white;
+    border: 1px solid rgba(90, 90, 90, 0.819);
+    border-radius: 6px;
+    padding-top: 3%;
+    padding-left: 2%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-right: .5rem;;
+    text-align: center;
   }
 
   #uploadButton{
@@ -253,10 +287,12 @@
     grid-column: 2 / span 1;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    background-color: rgb(120, 195, 120);
+    background-color: rgba(120, 195, 120, 0.713);
     color: white;
-    border: 2px solid black;
+    border: 1px solid white;
     border-radius: 6px;
+    margin-left: .5rem;
+    
   }
 
   #userFields{
@@ -317,9 +353,9 @@
   #saveButton{
     grid-column: 1 / span 1;
     grid-row: 3 / span 1;
-    background-color: rgb(120, 195, 120);
+    background-color: rgba(120, 195, 120, 0.713);
     color: white;
-    border: 2px solid black;
+    border: 1px solid white;
     border-radius: 6px;
   }
 
@@ -338,9 +374,9 @@
     margin-bottom: 1rem;
     margin-left: .5rem;
     margin-right: .5rem;
-    background-color: rgb(90, 145, 180);
+    background-color: rgba(90, 146, 180, 0.735);
     color: white;
-    border: 2px solid black;
+    border: 2px solid white;
     border-radius: 6px;
   }
 
