--- a/public/css/adminDash.css
+++ b/public/css/adminDash.css
@@ -77,7 +77,7 @@
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
-    color: white;
+    color: black;
     justify-self: center;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -91,7 +91,7 @@
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
-    color: white;
+    color: black;
     justify-self: center;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -105,7 +105,7 @@
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
-    color: white;
+    color: black;
     justify-self: center;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -119,7 +119,7 @@
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
-    color: white;
+    color: black;
     justify-self: center;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -258,7 +258,7 @@
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
-    color: white;
+    color: black;
     justify-self: center;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -272,7 +272,7 @@
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
-    color: white;
+    color: black;
     justify-self: center;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -286,7 +286,7 @@
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
-    color: white;
+    color: black;
     justify-self: center;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -300,7 +300,7 @@
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
-    color: white;
+    color: black;
     justify-self: center;
     margin-top: 2%;
     margin-bottom: 2%;
