--- a/public/css/adminDash.css
+++ b/public/css/adminDash.css
@@ -180,22 +180,22 @@
 
   #container1{
     display:grid;
-    grid-template-rows: 10% 90%;
     grid-template-columns: 100%;
+    grid-template-rows: 10% 90%;
     height: 100vh;
   }
 
   #container2{
     display: grid;
-    grid-template-columns: 40% 44% 16%;
-    grid-template-rows: 33.33% 33.33% 33.33%;
+    grid-template-columns: 25% 50% 25%;
+    grid-template-rows: 100%;
   }
 
   #content{
     display: grid;
     grid-column: 2;
     grid-row: 1;
-    grid-template-columns: 43% 40% 17%;
+    grid-template-columns: 25% 50% 25%;
     grid-template-rows: 33.33% 33.33% 33.33%;
   }
 
@@ -207,7 +207,7 @@
   #data{
     display: grid;
     grid-column: 2;
-    grid-row: 1;
+    grid-row: 2;
     grid-template-rows: 33.33% 33.33% 33.33%;
     grid-template-columns: 100%;
   }
@@ -247,7 +247,8 @@
     margin:1rem;
     margin-top: 5rem;
     margin-bottom: 5rem;
-
+    height: 20%;
+    width: 70%;
   }
 
   #newVal1{
@@ -296,7 +297,7 @@
     grid-column: 1;
     grid-row: 4;
     width: 90%;
-    height: 70%;
+    height: 50%;
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
@@ -316,8 +317,8 @@
     width: 40%;
     margin-left: 3%;
     margin-top: 5%;
-    width: 60%;
-    height: 60%;
+    width: 30%;
+    height: 40%;
   }
 
   #searchUsers{
@@ -331,6 +332,8 @@
     margin-top: 5rem;
     margin-bottom: 5rem;
     text-align: center;
+    width: 20%;
+    height: 15%;
   }
 
   #showDB{
