--- a/public/css/navbarFooter.css
+++ b/public/css/navbarFooter.css
@@ -50,6 +50,9 @@ nav a {
 
 #logoutButton{
     float:right;
+    background-color: rgba(76, 76, 76, 0.437);
+    color:white;
+    font-size: 23px;
 }
 
 nav a:hover {
@@ -68,3 +71,5 @@ nav a:hover {
     vertical-align: middle;
     padding-top: 1%;
 }
+
+
