--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -9,7 +9,7 @@
   body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    /* background-color: black; */
   }
 
   #container1{
@@ -26,8 +26,8 @@
 
   #container2{
     display: grid;
-    grid-template-rows: 100%;
-    grid-template-columns: 5% 1fr 5%;
+    grid-template-rows: 800px 1fr;
+    grid-template-columns: 5% 90% 5%;
   }
 
   #container3{
@@ -189,12 +189,23 @@
     border-radius: 6px;
   }
 
+  #container4{
+    grid-row: 2 / span 1;
+    grid-column: 2 / span 1;
+    padding-left: 20px;
+  }
+
+  textarea{
+    max-width:90%;
+  }
+
   #logoutButton{
-    background-color: rgba(76, 76, 76, 0.437);
+    float:right;
+    background-color: rgba(174, 174, 174, 0.437);
     color:white;
     font-size: 23px;
-    border: 1px solid black;
-  }
+    border:none;
+}
 
 }
 
@@ -203,7 +214,7 @@
   body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    /* background-color: black; */
   }
 
   #container1{
@@ -220,8 +231,8 @@
 
   #container2{
     display: grid;
-    grid-template-rows: 100%;
-    grid-template-columns: 1fr 500px 1fr;
+    grid-template-rows: 85% 1fr;
+    grid-template-columns: 1fr 70% 1fr;
   }
 
   #container3{
@@ -248,10 +259,9 @@
   }
 
   #profileImage{
-    max-width: 100%;
-    height: 350px;
+    width: 90%;
+    height: 90%;
     object-fit: cover;
-    object-position: center; 
     border-radius: 10px;
     padding: 1rem;
     border: 3px solid rgba(90, 90, 90, 0.819);
@@ -273,7 +283,8 @@
   .findImageStyle{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    color: white;
+    width:85%;
+    /* color: white; */
     border: 1px solid rgba(90, 90, 90, 0.819);
     border-radius: 6px;
     padding-top: 3%;
@@ -287,6 +298,7 @@
   #uploadButton{
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
+    width: 88%;
     margin-top: 1rem;
     margin-bottom: 1rem;
     background-color: rgba(120, 195, 120, 0.713);
@@ -302,6 +314,8 @@
     grid-column: 1 / span 1;
     border-radius: 6px;
     border: .5px solid grey;
+    max-width:91.5%;
+    min-width:90%;
   }
 
   #buttonForm{
@@ -382,13 +396,22 @@
     border-radius: 6px;
   }
 
-  #logoutButton{
-    background-color: rgba(76, 76, 76, 0.437);
-    color:white;
-    font-size: 23px;
-    border: 1px solid black;
+  #container4{
+    grid-row: 2 / span 1;
+    grid-column: 2 / span 1;
+    padding-left: 20px;
   }
 
-  
+  textarea{
+    max-width:90%;
+  }
+
+  #logoutButton{
+    float:right;
+    background-color: rgba(174, 174, 174, 0.437);
+    color:white;
+    font-size: 23px;
+    border:none;
+}
   
 }
