--- a/public/css/adminDash.css
+++ b/public/css/adminDash.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-*{
+* {
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -13,35 +13,43 @@
     color: white;
   }
 
-  #container1{
-    display:grid;
+  #container1 {
+    display: grid;
     grid-template-rows: 5% 30% 65%;
     grid-template-columns: 100%;
     height: 100vh;
   }
 
-  #container2{
+  #container2 {
 
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
   }
 
-  #search{
+  #content {
+    display: grid;
+    grid-column: 2;
+    grid-row: 1;
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: 33.33% 33.33% 33.33% 33.33%;
+  }
+
+  #search {
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
   }
 
-  #adminDash{
+  #adminDash {
     display: grid;
     grid-template-rows: 33% 33% 33%;
     grid-template-columns: 100%;
     height: 45vh;
   }
 
-  #searchBar{
+  #searchBar {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    width: 90%;
+    width: 100%;
     justify-self: center;
     margin-bottom: 1.5rem;
     margin-top: 1.5rem;
@@ -54,7 +62,7 @@
 
   }
 
-  #searchUsers{
+  #searchUsers {
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
     width: 90%;
@@ -69,7 +77,7 @@
     margin-right: 10%;
   }
 
-  #newVal1{
+  .newVal1 {
     grid-column: 1;
     grid-row: 1;
     width: 90%;
@@ -83,7 +91,8 @@
     margin-bottom: 2%;
     margin-right: 2%;
   }
-  #newVal2{
+
+  .newVal2 {
     grid-column: 1;
     grid-row: 2;
     width: 90%;
@@ -97,7 +106,8 @@
     margin-bottom: 2%;
     margin-right: 2%;
   }
-  #newVal3{
+
+  .newVal3 {
     grid-column: 1;
     grid-row: 3;
     width: 90%;
@@ -111,11 +121,12 @@
     margin-bottom: 2%;
     margin-right: 2%;
   }
-  #newVal4{
+
+  .newVal4 {
     grid-column: 1;
     grid-row: 4;
     width: 90%;
-    height: 70%;
+    height: 50%;
     font-size: 20px;
     border: 2px solid white;
     border-radius: 6px;
@@ -126,7 +137,7 @@
     margin-right: 2%;
   }
 
-  .save{
+  .save {
     color: white;
     justify-items: center;
     background-color: rgb(107, 169, 94);
@@ -135,8 +146,161 @@
     width: 40%;
   }
 
-  #showDB{ 
-   
+  #data {
+    display: grid;
+    grid-column: 2;
+    grid-row: 2;
+    grid-template-columns: 100%;
+    grid-template-rows: 33.33% 33.33% 33.33%;
+  }
+
+  .search {
+    display: grid;
+    grid-template-columns: 75% 25%;
+    grid-template-rows: 70% 20% 10%;
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  #searchSection {
+    display: grid;
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  #adding {
+    display: grid;
+    grid-column: 2;
+    grid-row: 4;
+    grid-template-columns: 100%;
+    grid-template-rows: 33.33% 33.33% 33.33% 33.33% 33.33%;
+  }
+
+  .email {
+    display: grid;
+    grid-column: 1;
+    grid-row: 31;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  .pass {
+    display: grid;
+    grid-column: 1;
+    grid-row: 2;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  .name {
+    display: grid;
+    grid-column: 1;
+    grid-row: 3;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  .lname {
+    display: grid;
+    grid-column: 1;
+    grid-row: 4;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  #val5 {
+    display: grid;
+    grid-column: 1;
+    grid-row: 5;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  #val6 {
+    display: grid;
+    grid-column: 1;
+    grid-row: 6;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  .add {
+    color: white;
+    justify-items: center;
+    background-color: rgb(107, 169, 94);
+    border-radius: 6px;
+    border: 2px solid white;
+    width: 40%;
+    margin-left: 3%;
+    margin-top: 5%;
+    width: 30%;
+    height: 40%;
+  }
+
+  #deleting {
+    display: grid;
+    grid-column: 2;
+    grid-row: 1;
+    margin-top: 10%;
+  }
+
+  #delete {
+    font-size: 20px;
+    background-color: rgb(255, 30, 0);
+    border: 2px solid white;
+    border-radius: 6px;
+    color: white;
+    text-align: center;
+    margin-top: 100%;
+    width: 100%;
+    height: 40%;
+  }
+
+
+  #showDB {
+
     width: 90%;
     font-size: 20px;
     background-color: rgb(94, 155, 169);
@@ -150,7 +314,7 @@
     margin-left: 5%;
   }
 
-  #searchingPage{
+  #searchingPage {
     color: white;
     justify-items: center;
     margin-left: 8rem;
@@ -159,9 +323,9 @@
     border: 2px solid white;
   }
 
-  #logoutButton{
+  #logoutButton {
     background-color: rgba(76, 76, 76, 0.437);
-    color:white;
+    color: white;
     font-size: 23px;
     border: 1px solid black;
   }
@@ -178,65 +342,186 @@
 
   }
 
-  #container1{
-    display:grid;
+  #container1 {
+    display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 10% 90%;
     height: 100vh;
   }
 
-  #container2{
+  #container2 {
     display: grid;
-    grid-template-columns: 25% 50% 25%;
+    grid-template-columns: 20% 60% 20%;
     grid-template-rows: 100%;
   }
 
-  #content{
+  #content {
     display: grid;
     grid-column: 2;
     grid-row: 1;
-    grid-template-columns: 25% 50% 25%;
-    grid-template-rows: 33.33% 33.33% 33.33%;
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: 33.33% 33.33% 33.33% 33.33%;
   }
 
-  #search{
+  #search {
     display: grid;
     grid-column: 2;
     grid-row: 1;
   }
-  #data{
+
+  #data {
     display: grid;
     grid-column: 2;
     grid-row: 2;
-    grid-template-rows: 33.33% 33.33% 33.33%;
     grid-template-columns: 100%;
+    grid-template-rows: 33.33% 33.33% 33.33%;
   }
 
-  #showAll{
+  #showAll {
     grid-column: 1;
     grid-row: 1;
   }
 
-  #searchPage{
+  #searchPage {
     grid-column: 3;
     grid-row: 1;
   }
 
 
-  #search{
+  .search {
+    display: grid;
+    grid-template-columns: 75% 25%;
+    grid-template-rows: 70% 20% 10%;
     grid-column: 2;
     grid-row: 1;
   }
 
-  #adminDash{
+  #searchSection {
     display: grid;
-    grid-template-rows: 50% 50%;
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  #adding {
+    display: grid;
+    grid-column: 2;
+    grid-row: 4;
+    grid-template-columns: 100%;
+    grid-template-rows: 33.33% 33.33% 33.33% 33.33% 33.33%;
+  }
+
+  .email {
+    display: grid;
+    grid-column: 1;
+    grid-row: 31;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  .pass {
+    display: grid;
+    grid-column: 1;
+    grid-row: 2;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  .name {
+    display: grid;
+    grid-column: 1;
+    grid-row: 3;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  .lname {
+    display: grid;
+    grid-column: 1;
+    grid-row: 4;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  #val5 {
+    display: grid;
+    grid-column: 1;
+    grid-row: 5;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  #val6 {
+    display: grid;
+    grid-column: 1;
+    grid-row: 6;
+    width: 90%;
+    height: 50%;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 6px;
+    color: black;
+    justify-self: center;
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+
+  .add {
+    color: white;
+    justify-items: center;
+    background-color: rgb(107, 169, 94);
+    border-radius: 6px;
+    border: 2px solid white;
+    width: 40%;
+    margin-left: 3%;
+    margin-top: 5%;
+    width: 30%;
+    height: 40%;
+  }
+
+  #adminDash {
+    display: grid;
     grid-template-columns: 70% 30%;
+    grid-template-rows: 50% 50%;
     grid-gap: 1rem;
     height: 55vh;
   }
 
-  #searchBar{
+  #searchBar {
     grid-column: 1;
     grid-row: 1;
     background-color: rgb(196, 196, 196);
@@ -244,14 +529,14 @@
     border-radius: 6px;
     font-size: 20px;
     color: black;
-    margin:1rem;
+    margin: 1rem;
     margin-top: 5rem;
     margin-bottom: 5rem;
     height: 20%;
-    width: 70%;
+    width: 80%;
   }
 
-  .newVal1{
+  .newVal1 {
     grid-column: 1;
     grid-row: 1;
     width: 90%;
@@ -265,7 +550,8 @@
     margin-bottom: 2%;
     margin-right: 2%;
   }
-  .newVal2{
+
+  .newVal2 {
     grid-column: 1;
     grid-row: 2;
     width: 90%;
@@ -279,7 +565,8 @@
     margin-bottom: 2%;
     margin-right: 2%;
   }
-  .newVal3{
+
+  .newVal3 {
     grid-column: 1;
     grid-row: 3;
     width: 90%;
@@ -293,7 +580,8 @@
     margin-bottom: 2%;
     margin-right: 2%;
   }
-  .newVal4{
+
+  .newVal4 {
     grid-column: 1;
     grid-row: 4;
     width: 90%;
@@ -308,7 +596,7 @@
     margin-right: 2%;
   }
 
-  .save{
+  .save {
     color: white;
     justify-items: center;
     background-color: rgb(107, 169, 94);
@@ -321,22 +609,40 @@
     height: 40%;
   }
 
-  #searchUsers{
-    grid-row: 1 / span 1;
-    grid-column: 2 / span 1;
+  #searchUsers {
+    grid-row: 1;
+    grid-column: 2;
     font-size: 20px;
     background-color: rgb(255, 119, 0);
     border: 2px solid white;
     border-radius: 6px;
     color: white;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+    margin-top: 50%;
     text-align: center;
-    width: 20%;
-    height: 15%;
+    width: 70%;
+    height: 20%;
   }
 
-  #showDB{
+  #deleting {
+    display: grid;
+    grid-column: 2;
+    grid-row: 1;
+    margin-top: 50%;
+  }
+
+  #delete {
+    font-size: 20px;
+    background-color: rgb(255, 30, 0);
+    border: 2px solid white;
+    border-radius: 6px;
+    color: white;
+    text-align: center;
+    margin-top: -15%;
+    width: 70%;
+    height: 49%;
+  }
+
+  #showDB {
     width: 90%;
     grid-row: 2 / span 1;
     grid-column: 1 / span 2;
@@ -349,7 +655,7 @@
     text-align: center;
   }
 
-  #searchingPage{
+  #searchingPage {
     color: rgb(0, 0, 0);
     justify-items: center;
     margin-left: 3rem;
@@ -359,9 +665,9 @@
     border: 2px solid white;
   }
 
-  #logoutButton{
+  #logoutButton {
     background-color: rgba(76, 76, 76, 0.437);
-    color:white;
+    color: white;
     font-size: 25px;
     border: 1px solid black;
   }
